force-app/main/default/objects/Repository__c/fields/Created_On_GitHub__c.field-meta.xml
<CustomField>
    <fullName>Created_On_GitHub__c</fullName>
    <label>Created On GitHub</label>
    <type>Date</type>
</CustomField>