force-app/main/default/objects/Repository__c/fields/Forks__c.field-meta.xml
<CustomField>
    <fullName>Forks__c</fullName>
    <label>Forks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>