force-app/main/default/objects/Repository__c/fields/Github_URL__c.field-meta.xml
<CustomField>
    <fullName>Github_URL__c</fullName>
    <label>Github URL</label>
    <type>Url</type>
</CustomField>