force-app/main/default/objects/Repository__c/fields/Open_Issues__c.field-meta.xml
<CustomField>
    <fullName>Open_Issues__c</fullName>
    <label>Open Issues</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>