force-app/main/default/objects/Repository__c/validationRules/Active_Repository_Must_Have_Active_Statu.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Repository_Must_Have_Active_Statu</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Active__c,
NOT(ISPICKVAL(Status__c,&quot;Active&quot;))
)</errorConditionFormula>
    <errorDisplayField>Active__c</errorDisplayField>
    <errorMessage>If the repository is marked Active, the Status must be Active.</errorMessage>
</ValidationRule>