force-app/main/default/objects/Repository__c/validationRules/Forks_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Forks_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Prevents users from entering a negative number of forks.</description>
    <errorConditionFormula>Forks__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Forks__c</errorDisplayField>
    <errorMessage>Forks cannot be less than 0.</errorMessage>
</ValidationRule>