force-app/main/default/objects/Repository__c/validationRules/GitHub_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>GitHub_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Created_On_GitHub__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Created_On_GitHub__c</errorDisplayField>
    <errorMessage>Created On GitHub cannot be a future date.</errorMessage>
</ValidationRule>