force-app/main/default/objects/Repository__c/validationRules/Open_Issues_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Issues_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Open_Issues__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Open_Issues__c</errorDisplayField>
    <errorMessage>Open Issues cannot be less than 0.</errorMessage>
</ValidationRule>