force-app/main/default/objects/Repository__c/validationRules/Public_Repository_Requires_GitHub_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Public_Repository_Requires_GitHub_URL</fullName>
    <active>true</active>
    <description>Public repositories must have a GitHub URL.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Visibility__c, &quot;Public&quot;),
ISBLANK(Github_URL__c)
)</errorConditionFormula>
    <errorDisplayField>Github_URL__c</errorDisplayField>
    <errorMessage>Public repositories must have a GitHub URL.</errorMessage>
</ValidationRule>