force-app/main/default/objects/Repository__c/validationRules/Stars_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Stars_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Prevents negative values for repository stars.</description>
    <errorConditionFormula>Stars__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Stars__c</errorDisplayField>
    <errorMessage>Stars cannot be less than 0.</errorMessage>
</ValidationRule>