force-app/main/default/objects/Repository__c/validationRules/Watchers_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Watchers_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Prevents users from entering a negative number of watchers.</description>
    <errorConditionFormula>Watchers__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Watchers__c</errorDisplayField>
    <errorMessage>Watchers cannot be less than 0.</errorMessage>
</ValidationRule>